--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="colorRed">#EB5757</color>
     <color name="colorGreen">#008577</color>
     <color name="colorGreenDark">#00574B</color>
+    <color name="colorGrey1">#BDBDBD</color>
 
     <color name="title1">#828282</color>
     <color name="title2">#333333</color>
