--- a/app/src/main/res/drawable/background_input3.xml
+++ b/app/src/main/res/drawable/background_input3.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/colorPrimary" />
             <corners android:radius="4dp" />
             <padding android:bottom="12dp" android:left="16dp" android:right="16dp" android:top="14dp" />
         </shape>
