--- a/app/src/main/res/drawable/radio_button_background.xml
+++ b/app/src/main/res/drawable/radio_button_background.xml
@@ -2,7 +2,7 @@
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item>
         <shape>
-            <solid android:color="#FFFFFF" />
+            <solid android:color="@color/colorPrimary" />
             <corners android:radius="8dp" />
         </shape>
     </item>
