--- a/app/src/main/res/layout/item_photo_list.xml
+++ b/app/src/main/res/layout/item_photo_list.xml
@@ -10,6 +10,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -34,10 +35,10 @@
             android:id="@+id/imageView_itemPhotoList_thumbnail"
             android:layout_width="68dp"
             android:layout_height="51dp"
-            android:background="@color/backgroundImage1"
             android:layout_marginTop="@dimen/margin_medium"
             android:layout_marginEnd="@dimen/margin_medium"
             android:layout_marginBottom="@dimen/margin_medium"
+            android:background="@color/backgroundImage1"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent"
