--- a/app/src/main/res/layout/item_public_work_list.xml
+++ b/app/src/main/res/layout/item_public_work_list.xml
@@ -10,6 +10,7 @@
     android:clickable="true"
     android:focusable="true"
     android:foreground="?android:attr/selectableItemBackground"
+    app:cardBackgroundColor="@color/colorPrimary"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -32,7 +33,7 @@
 
         <TextView
             android:id="@+id/textView_itemPublicWorkList_distance"
-            style="@style/MPAppTheme.PublicWorkAddress"
+            style="@style/MPAppTheme.PublicWorkDistance"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_default"
@@ -63,6 +64,7 @@
             android:layout_marginTop="@dimen/margin_small"
             android:layout_marginEnd="@dimen/margin_default"
             android:src="@drawable/ic_sent"
+            android:tint="@color/colorBlue1"
             android:visibility="invisible"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/textView_itemPublicWorkList_distance" />
@@ -74,6 +76,7 @@
             android:layout_marginTop="@dimen/margin_xsmall"
             android:layout_marginBottom="@dimen/margin_medium"
             android:src="@drawable/ic_check"
+            android:tint="@color/colorGreenMP"
             android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView_itemPublicWorkList_sent"
