--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,7 +10,11 @@
     <color name="colorRed">#EB5757</color>
     <color name="colorGreen">#008577</color>
     <color name="colorGreenDark">#00574B</color>
+    <color name="colorGreyLight">#F2F2F2</color>
+    <color name="colorGreyMedium">#E0E0E0</color>
     <color name="colorGrey1">#BDBDBD</color>
+    <color name="colorBlue1">#2D9CDB</color>
+    <color name="colorGrey2">#828282</color>
 
     <color name="title1">#828282</color>
     <color name="title2">#333333</color>
@@ -35,6 +39,7 @@
     <color name="textButton5">#F2F2F2</color>
     <color name="textButton3Enabled">#73FF00</color>
     <color name="textAddress">#828282</color>
+    <color name="textCheckDisabled">#BDBDBD</color>
 
     <color name="circleBackground1">#4F4F4F</color>
 
@@ -43,7 +48,7 @@
     <color name="buttonValid1">#2F80ED</color>
     <color name="buttonInvalid1">#EB5757</color>
 
-    <color name="hintColor1">#828282</color>
+    <color name="hintColor1">#BDBDBD</color>
 
     <color name="backgroundImage1">#E0E0E0</color>
     <color name="backgroundMapHint">#80333333</color>
