New dialog style following look and feel of whole application for multiple and single options selection options mode.

--- a/app/src/main/res/layout/bottom_sheet_comment.xml
+++ b/app/src/main/res/layout/bottom_sheet_comment.xml
@@ -13,7 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="@color/colorPrimary">
+        android:background="@drawable/background_title_dialog">
 
         <TextView
             android:id="@+id/textView17"
@@ -36,6 +36,7 @@
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
             android:maxLength="300"
+            android:imeOptions="actionDone"
             android:text="@={collectViewModel.collect.comments}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
