--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -19,6 +19,8 @@
     <dimen name="height_default">48dp</dimen>
     <dimen name="height_large">56dp</dimen>
 
+    <dimen name="dialog_close_size">28dp</dimen>
+
     <dimen name="button_default">40dp</dimen>
 
     <dimen name="button_width">300dp</dimen>
