--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -89,7 +89,21 @@
         <item name="android:textSize">16sp</item>
         <item name="android:background">@drawable/background_input3</item>
         <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColor">@color/colorWhite</item>
         <item name="android:singleLine">true</item>
+    </style>
+
+    <style name="MPAppTheme.DialogHeader" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/font_xsmall</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:textAllCaps">true</item>
+    </style>
+
+    <style name="MPAppTheme.DialogOption" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">16sp</item>
+        <item name="android:fontFamily">@font/gotham_book</item>
+        <item name="android:textColor">@color/colorWhite</item>
     </style>
 
     <style name="MPAppTheme.ButtonBase" parent="Widget.MaterialComponents.Button.UnelevatedButton">
@@ -142,6 +156,13 @@
         <item name="iconTint">@color/colorGreenMP</item>
     </style>
 
+    <style name="MPAppTheme.ButtonTextNegative" parent="Widget.MaterialComponents.Button.TextButton">
+        <item name="android:textSize">@dimen/font_default</item>
+        <item name="android:textColor">@color/colorWhite</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="MPAppTheme.RadioButton" parent="Widget.MaterialComponents.CompoundButton.RadioButton">
         <item name="android:button">@drawable/radio_button_inset</item>
         <item name="android:background">@drawable/radio_button_background</item>
@@ -174,5 +195,15 @@
         <item name="cornerSizeTopLeft">16dp</item>
         <item name="cornerSizeBottomRight">0dp</item>
         <item name="cornerSizeBottomLeft">0dp</item>
+    </style>
+
+    <style name="MPAppTheme.DialogStyle" parent="Base.Theme.AppCompat.Dialog">
+        <item name="android:windowMinWidthMajor">80%</item>
+        <item name="android:windowMinWidthMinor">80%</item>
+        <item name="android:windowBackground">@null</item>
+    </style>
+
+    <style name="MPAppTheme.Divider" parent="MPAppTheme">
+        <item name="android:background">@color/dividerColor1</item>
     </style>
 </resources>
