Adding comments to collect text

--- a/app/src/main/res/layout/bottom_sheet_comment.xml
+++ b/app/src/main/res/layout/bottom_sheet_comment.xml
@@ -33,11 +33,11 @@
             android:layout_height="300dp"
             android:layout_marginTop="@dimen/margin_large"
             android:gravity="top|start"
+            android:imeOptions="actionDone"
             android:importantForAutofill="no"
             android:inputType="textMultiLine"
             android:maxLength="300"
-            android:imeOptions="actionDone"
-            android:text="@={collectViewModel.collect.comments}"
+            android:text="@={collectViewModel.comment}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
