--- a/app/src/main/res/layout/fragment_collect_main.xml
+++ b/app/src/main/res/layout/fragment_collect_main.xml
@@ -84,7 +84,7 @@
             android:layout_width="@dimen/button_width"
             android:layout_height="@dimen/height_default"
             android:layout_marginBottom="@dimen/margin_xxlarge"
-            android:text="@string/button_add_comment"
+            android:text="@{collectViewModel.comment==null ? @string/button_add_comment : @string/button_update_comment}"
             app:icon="@drawable/ic_comment"
             app:iconGravity="textStart"
             app:iconTint="@color/text_button_primary"
