--- a/app/src/main/res/values/dimen.xml
+++ b/app/src/main/res/values/dimen.xml
@@ -4,6 +4,7 @@
     <dimen name="margin_xxsmall">2dp</dimen>
     <dimen name="margin_xsmall">4dp</dimen>
     <dimen name="margin_small">8dp</dimen>
+    <dimen name="margin_xmedium">10dp</dimen>
     <dimen name="margin_medium">12dp</dimen>
     <dimen name="margin_default">16dp</dimen>
     <dimen name="margin_large">20dp</dimen>
