--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".ui.screens.login.fragments.LoginFragment">
 
     <data>
 
@@ -16,8 +17,7 @@
         android:id="@+id/coordinatorLayout_loginFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/background_main"
-        tools:context=".ui.screens.login.LoginFragment">
+        android:background="@drawable/background_main">
 
         <ScrollView
             android:layout_width="match_parent"
@@ -33,7 +33,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="208dp"
                     android:layout_height="73dp"
-                    android:layout_marginTop="80dp"
+                    android:layout_marginTop="@dimen/margin_xxxlarge"
                     android:src="@drawable/ic_logo_trena_dark"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
@@ -46,7 +46,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="@dimen/margin_small"
-                    android:layout_marginTop="86dp"
+                    android:layout_marginTop="@dimen/margin_xxlarge"
                     android:labelFor="@id/editText_loginFragment_userInput"
                     android:text="@string/label_email"
                     app:layout_constraintStart_toStartOf="@+id/editText_loginFragment_userInput"
@@ -116,6 +116,17 @@
                     app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
                     app:layout_constraintTop_toBottomOf="@+id/inputTextLayout_loginFormFragment_password" />
 
+                <TextView
+                    android:id="@+id/textView_loginFragment_createAccount"
+                    style="@style/MPAppTheme.Text1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="@dimen/margin_default"
+                    android:text="@string/text_create_account"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+
                 <View
                     android:id="@+id/view"
                     android:layout_width="24dp"
@@ -141,13 +152,13 @@
                     android:id="@+id/textView15"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="@dimen/margin_large"
+                    android:layout_marginTop="@dimen/margin_medium"
                     android:fontFamily="@font/gotham_rounded_light_italic"
                     android:text="@string/label_if_prefer"
                     android:textColor="@color/colorWhite"
                     app:layout_constraintEnd_toEndOf="@+id/materialButton"
                     app:layout_constraintStart_toStartOf="@+id/materialButton"
-                    app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+                    app:layout_constraintTop_toBottomOf="@+id/textView_loginFragment_createAccount" />
 
                 <com.google.android.material.button.MaterialButton
                     android:id="@+id/button_loginFragment_googleSignIn"
@@ -196,8 +207,8 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@color/colorBlackOpaque"
-            android:visibility="@{loginViewModel.isLoading() ? View.VISIBLE : View.GONE}"
-            android:clickable="false">
+            android:clickable="false"
+            android:visibility="@{loginViewModel.isLoading() ? View.VISIBLE : View.GONE}">
 
             <ProgressBar
                 android:id="@+id/contentLoadingPrograssBar_loginFragment"
@@ -222,12 +233,11 @@
                 style="@style/MPAppTheme.Title1"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/text_loading_login"
                 android:layout_marginTop="@dimen/margin_small"
+                android:text="@string/text_loading_login"
                 app:layout_constraintEnd_toEndOf="@+id/contentLoadingPrograssBar_loginFragment"
                 app:layout_constraintStart_toStartOf="@+id/contentLoadingPrograssBar_loginFragment"
                 app:layout_constraintTop_toBottomOf="@+id/contentLoadingPrograssBar_loginFragment" />
-
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
