--- a/app/src/main/res/navigation/main_graph.xml
+++ b/app/src/main/res/navigation/main_graph.xml
@@ -7,14 +7,25 @@
 
     <fragment
         android:id="@+id/loginFragment"
-        android:name="org.mpmg.mpapp.ui.screens.login.LoginFragment"
+        android:name="org.mpmg.mpapp.ui.screens.login.fragments.LoginFragment"
         android:label="LoginFragment">
 
         <action
             android:id="@+id/action_loginFragment_to_setupApplicationFragment"
             app:destination="@id/setupApplicationFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out"
             app:popUpTo="@id/loginFragment"
             app:popUpToInclusive="true" />
+        <action
+            android:id="@+id/action_loginFragment_to_createAccountFragment"
+            app:destination="@id/createAccountFragment"
+            app:enterAnim="@anim/fade_in"
+            app:exitAnim="@anim/fade_out"
+            app:popEnterAnim="@anim/fade_in"
+            app:popExitAnim="@anim/fade_out" />
     </fragment>
 
     <fragment
@@ -147,6 +158,16 @@
         android:name="org.mpmg.mpapp.ui.screens.upload.fragments.UploadDataFragment"
         android:label="fragment_public_work_send"
         tools:layout="@layout/fragment_public_work_send" />
+    <fragment
+        android:id="@+id/createAccountFragment"
+        android:name="org.mpmg.mpapp.ui.screens.login.fragments.CreateAccountFragment"
+        android:label="fragment_create_account"
+        tools:layout="@layout/fragment_create_account">
+        <action
+            android:id="@+id/action_createAccountFragment_pop"
+            app:popUpTo="@id/createAccountFragment"
+            app:popUpToInclusive="true" />
+    </fragment>
 
 
 </navigation>
