--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -27,6 +27,12 @@
         <item name="android:textColor">@color/colorWhite</item>
     </style>
 
+    <style name="MPAppTheme.ErrorText" parent="TextAppearance.AppCompat">
+        <item name="android:textSize">@dimen/font_default</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
+        <item name="android:textColor">@color/colorRed</item>
+    </style>
+
     <style name="MPAppTheme.PublicWorkName" parent="TextAppearance.AppCompat">
         <item name="android:textSize">@dimen/font_large</item>
         <item name="android:fontFamily">@font/gotham_rounded_medium</item>
