--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,6 +11,10 @@
         <variable
             name="loginViewModel"
             type="org.mpmg.mpapp.ui.viewmodels.LoginViewModel" />
+
+        <variable
+            name="loginUI"
+            type="org.mpmg.mpapp.ui.screens.login.models.LoginUI" />
     </data>
 
     <androidx.coordinatorlayout.widget.CoordinatorLayout
@@ -54,7 +58,7 @@
 
                 <EditText
                     android:id="@+id/editText_loginFragment_userInput"
-                    style="@style/MPAppTheme.EditText1"
+                    style="@style/MPAppTheme.EditText2"
                     android:layout_width="0dp"
                     android:layout_height="@dimen/height_default"
                     android:layout_marginStart="@dimen/margin_xxlarge"
@@ -64,6 +68,7 @@
                     android:importantForAutofill="no"
                     android:inputType="textEmailAddress"
                     android:singleLine="true"
+                    android:text="@={loginUI.email}"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -95,22 +100,24 @@
 
                     <com.google.android.material.textfield.TextInputEditText
                         android:id="@+id/editText_loginFragment_passwordInput"
-                        style="@style/MPAppTheme.EditText1"
+                        style="@style/MPAppTheme.EditText2"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:hint="@string/hint_login_password"
                         android:importantForAutofill="no"
                         android:inputType="textPassword"
                         android:padding="0dp"
-                        android:singleLine="true" />
+                        android:singleLine="true"
+                        android:text="@={loginUI.password}" />
                 </com.google.android.material.textfield.TextInputLayout>
 
                 <com.google.android.material.button.MaterialButton
-                    android:id="@+id/materialButton"
+                    android:id="@+id/materialButton_loginFragment_loginMP"
                     style="@style/MPAppTheme.Button1"
                     android:layout_width="300dp"
                     android:layout_height="@dimen/height_default"
                     android:layout_marginTop="@dimen/margin_xxlarge"
+                    android:enabled="@{loginUI.valid}"
                     android:text="@string/button_login"
                     app:layout_constraintEnd_toEndOf="@+id/button_loginFragment_googleSignIn"
                     app:layout_constraintStart_toStartOf="@+id/button_loginFragment_googleSignIn"
@@ -125,7 +132,7 @@
                     android:text="@string/text_create_account"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/materialButton" />
+                    app:layout_constraintTop_toBottomOf="@+id/materialButton_loginFragment_loginMP" />
 
                 <View
                     android:id="@+id/view"
@@ -156,8 +163,8 @@
                     android:fontFamily="@font/gotham_rounded_light_italic"
                     android:text="@string/label_if_prefer"
                     android:textColor="@color/colorWhite"
-                    app:layout_constraintEnd_toEndOf="@+id/materialButton"
-                    app:layout_constraintStart_toStartOf="@+id/materialButton"
+                    app:layout_constraintEnd_toEndOf="@+id/materialButton_loginFragment_loginMP"
+                    app:layout_constraintStart_toStartOf="@+id/materialButton_loginFragment_loginMP"
                     app:layout_constraintTop_toBottomOf="@+id/textView_loginFragment_createAccount" />
 
                 <com.google.android.material.button.MaterialButton
