--- a/app/src/main/res/drawable/background_options_dialog.xml
+++ b/app/src/main/res/drawable/background_options_dialog.xml
@@ -3,6 +3,8 @@
     <solid android:color="@color/colorGrey3" />
 
     <corners
+        android:topLeftRadius="10dp"
+        android:topRightRadius="10dp"
         android:bottomLeftRadius="10dp"
         android:bottomRightRadius="10dp" />
 </shape>
