--- a/app/src/main/res/layout/dialog_warning.xml
+++ b/app/src/main/res/layout/dialog_warning.xml
@@ -7,19 +7,13 @@
 
         <import type="android.view.View" />
 
-        <import type="org.mpmg.mpapp.ui.dialogs.SelectorDialog.SelectionMode" />
-
         <variable
             name="title"
             type="String" />
 
         <variable
-            name="negativeButton"
-            type="Boolean" />
-
-        <variable
-            name="confirmButton"
-            type="Boolean" />
+            name="message"
+            type="String" />
     </data>
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -39,7 +33,7 @@
             app:layout_constraintTop_toTopOf="parent">
 
             <TextView
-                android:id="@+id/textView_singleSelectionDialog_title"
+                android:id="@+id/textView_warningDialog_title"
                 style="@style/MPAppTheme.DialogHeader"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
@@ -50,13 +44,13 @@
                 android:paddingEnd="@dimen/margin_default"
                 android:text="@{title}"
                 app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toStartOf="@+id/imageView_singleSelectionDialog_close"
+                app:layout_constraintEnd_toStartOf="@+id/imageView_warningDialog_close"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/imageView_singleSelectionDialog_close"
-                tools:text="Aviso sobre a deleção" />
+                app:layout_constraintTop_toTopOf="@+id/imageView_warningDialog_close"
+                tools:text="Selecionar tipo de obra" />
 
             <ImageView
-                android:id="@+id/imageView_singleSelectionDialog_close"
+                android:id="@+id/imageView_warningDialog_close"
                 android:layout_width="@dimen/dialog_close_size"
                 android:layout_height="@dimen/dialog_close_size"
                 android:layout_marginTop="@dimen/margin_medium"
@@ -69,40 +63,45 @@
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
-        <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/recyclerView_singleSelectionDialog"
+        <TextView
+            android:id="@+id/textView_warningDialog"
+            style="@style/MPAppTheme.Text1"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginStart="@dimen/margin_default"
+            android:layout_marginEnd="@dimen/margin_default"
+            android:gravity="center"
+            android:minHeight="100dp"
             android:paddingBottom="@dimen/margin_medium"
-            app:layout_constraintBottom_toTopOf="@+id/materialButton_singleSelectionDialog_cancel"
+            android:text="@{message}"
+            app:layout_constraintBottom_toTopOf="@+id/materialButton_warningDialog_confirm"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />
+            app:layout_constraintTop_toBottomOf="@+id/constraintLayout"
+            tools:text="A coleta não poderá ser restaurada" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton_singleSelectionDialog_confirm"
+            android:id="@+id/materialButton_warningDialog_confirm"
             style="@style/MPAppTheme.ButtonSmall1"
             android:layout_width="wrap_content"
-            android:textColor="@color/colorRed"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_small"
             android:layout_marginBottom="@dimen/margin_small"
+            android:textColor="@color/colorRed"
             android:text="@string/button_confirm"
-            android:visibility="@{confirmButton ? View.VISIBLE:  View.GONE }"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent" />
 
         <com.google.android.material.button.MaterialButton
-            android:id="@+id/materialButton_singleSelectionDialog_cancel"
+            android:id="@+id/materialButton_warningDialog_cancel"
             style="@style/MPAppTheme.ButtonTextNegative"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginEnd="@dimen/margin_small"
             android:text="@string/button_cancel"
-            android:visibility="@{negativeButton ? View.VISIBLE:  View.GONE }"
-            app:layout_constraintBottom_toBottomOf="@+id/materialButton_singleSelectionDialog_confirm"
-            app:layout_constraintEnd_toStartOf="@+id/materialButton_singleSelectionDialog_confirm"
-            app:layout_constraintTop_toTopOf="@+id/materialButton_singleSelectionDialog_confirm" />
+            app:layout_constraintBottom_toBottomOf="@+id/materialButton_warningDialog_confirm"
+            app:layout_constraintEnd_toStartOf="@+id/materialButton_warningDialog_confirm"
+            app:layout_constraintTop_toTopOf="@+id/materialButton_warningDialog_confirm" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
