--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -8,6 +8,8 @@
         <item name="colorAccent">@color/colorGreenMP</item>
 
         <item name="bottomSheetDialogTheme">@style/MPAppTheme.CustomBottomSheetDialog</item>
+        <item name="android:textColorPrimary">@color/colorWhite</item>
+        <item name="android:fontFamily">@font/gotham_rounded_medium</item>
     </style>
 
     <style name="MPAppTheme.FullScreen" parent="MPAppTheme">
@@ -220,6 +222,5 @@
     <style name="MPAppTheme.Divider" parent="MPAppTheme">
         <item name="android:background">@color/dividerColor1</item>
     </style>
-
 
 </resources>
