* Changing the upload process to send data to receiving queue * Not mandatory to set a work status to close a collect * Password strength feedback appearing when creating user * Update some dependencies * Fixed some strings

--- a/app/src/main/res/layout/fragment_create_account.xml
+++ b/app/src/main/res/layout/fragment_create_account.xml
@@ -186,7 +186,7 @@
             android:layout_height="match_parent"
             android:background="@color/colorBlackOpaque"
             android:clickable="false"
-            android:visibility="@{createAccountViewModel.status == RequestStatus.LOADING ? View.VISIBLE : View.GONE}">
+            android:visibility="@{createAccountViewModel.status.first == RequestStatus.LOADING ? View.VISIBLE : View.GONE}">
 
             <ProgressBar
                 android:id="@+id/contentLoadingPrograssBar_loginFragment"
